fix: fix jvm config